<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidphotos42.SearchPhoto">

    <RelativeLayout
        android:id="@+id/relativeLayoutForSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="5dp">


        <EditText
            android:id="@+id/tagValue"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagName"
            android:hint="@string/searchTagValue"
            android:inputType="text" />

        <EditText
            android:id="@+id/tagName"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/searchTagName"
            android:inputType="text" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutForTags"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_below="@id/relativeLayoutForSearch"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/searchTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/addTag"
            android:layout_marginBottom="-54dp"
            android:text="@string/searchTags"
            android:visibility="visible"/>

        <Button
            android:id="@+id/addTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddTag"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tagsEntered"
            android:layout_width="267dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/searchTag"
            android:text="@string/enteredtags"
            android:textSize="16sp" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="593dp"
        android:layout_below="@id/relativeLayoutForTags"
        android:layout_marginTop="36dp"
        android:columnWidth="120dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth" />

</RelativeLayout>