<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlbumActivity">

    <TextView
        android:id="@+id/albumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="start"
        android:text="@string/photosTextView"
        android:textColor="@android:color/holo_red_light"
        android:textSize="21sp"
        android:textStyle="bold"
        tools:hint="Album Name" />

    <Button
        android:id="@+id/deletePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="510dp"
        android:text="@string/deletePhotoButton" />



    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="456dp"
        android:layout_below="@+id/deletePhotoButton"
        android:layout_marginTop="-518dp"
        android:columnWidth="120dp"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth">


    </GridView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_input_add"
        />



    <Button
        android:id="@+id/movePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="510dp"
        android:text="@string/movephotoButton" />

    <Button
        android:id="@+id/openPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:text="Open" />


</RelativeLayout>